frontend/css/contact.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css');
@import url("https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet");
@import url('https://fonts.googleapis.com/css?family=Inter');

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Inter', serif;
}

/* Navbar */
.container {
  max-width: 1100px;
  margin: 0 auto;
  padding: 20px 40px;
}

a {
  color: #000000;
  text-decoration: none;
}

.nav-link {
  list-style: none;
  margin: 20px 0;
  width: 8rem;
}

/* Navbar */
.navbar {
  background: #f4f4f4;
  position: fixed;
  width: 100%;
}

.flex-nav {
  display: flex;
  flex-direction: column;
}

.nav-header span {
  color: rgb(248, 104, 104);
}

.nav-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.nav-header h2 {
  color: #000000;
}
.nav-toggle {
  border: transparent;
  background: transparent;
  color: white;
  font-size: 1.5rem;
}

.nav-links {
  height: 0;
  overflow: hidden;
}

.nav-links ul li span {
  background: #00205c;
  border-radius: 5px;
  width: 120px;
  padding: 10px 30px;
}

.nav-links li {
  font-weight: 400;
}

.nav-open {
  height: 100vh;
}

@media only screen and (min-width: 900px) {
  .nav-toggle {
    display: none;
  }

  .nav-header {
    display: block;
  }

  .flex-nav {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 0 40px;
  }

  .nav-links {
    height: auto;
  }

  ul {
    text-align: center;
  }

  .nav-link {
    display: inline-block;
    border-bottom: none;
    align-items: center;
    text-align: center;
  }
}

/**************************************** Contact Section *******************************/

#contact-section {
  background-image: url('../images/header_bg.svg');
  height: 413px;
  width: 100%;
  color: #d9d9d9;
  box-shadow: inset 2000px 0 0 0 rgba(0, 32, 92, 0.5);
}

/* Contact US */
#contact-heading {
  position: absolute;
  width: 25%;
  height: 17%;
  left: 567px;
  top: 252px;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 700;
  font-size: 57.33px;
  line-height: 69px;
  text-align: center;
  color: #ffffff;
}

/* Want to talk to us? Fill the form and an our team will respond as soon as possible. */
#contact-section p {
  position: absolute;
  width: 60%;
  height: 60px;
  left: 291px;
  top: 331px;
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  line-height: 32px;
  text-align: center;
  color: #ffffff;
}

/************************ FORM *************************/

form {
  max-width: 638px;
  margin: 25%;
}

.form-section {
  height: 885px;
  text-align: center;
}

.feedback-input {
  font-family: 'Raleway';
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 150%;
  border-radius: 5px;
  background-color: transparent;
  border: 2px solid #000000;
  transition: all 0.3s;
  padding: 13px;
  margin-bottom: 15px;
  width: 100%;
  box-sizing: border-box;
  outline: 0;
}

form input {
  height: 80px;
}

.feedback-input:focus {
  border: 2px solid #00205c;
}

textarea {
  height: 315px;
  line-height: 150%;
  resize: vertical;
}

[type='submit'] {
  width: 100%;
  background: #00205c;
  border-radius: 5px;
  border: 0;
  cursor: pointer;
  color: white;
  font-size: 24px;
  padding-top: 10px;
  padding-bottom: 10px;
  transition: all 0.3s;
  margin-top: -4px;
  font-weight: 700;
}

[type='submit']:hover {
  background: #d9d9d9;
}

/********************* FOOTER *****************/
footer {
  background: #00205c;
  position: relative;
  width: 1440px;
  height: 529px;
  left: 0px;
  top: 0px;
}

/* Auto_Wiki */
footer h1 {
  position: absolute;
  width: 151px;
  height: 36px;
  left: 135px;
  top: 108.35px;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 700;
  font-size: 30px;
  line-height: 36px;
  text-align: center;
  color: #ffffff;
}

